# pecorino

./: .gitignore  .gitmodules  README.md  code_search.db  conversation_history.txt  git  gitstats.py  main  pecorino.py  pyproject.toml  requirements.txt  test_browse.py  test_db  test_kuzu.py  test_mcp.py  test_naming_scratch.py  test_pr.py  test_query.py  test_ssd.py  test_tool.py  test_tools.py  throttle_test.py  throttle_test2.py
.agents/: AGENTS.md
docs/: implementation_plan.md  indexer_architecture.md  local_server_deployment.md  performance_optimizations.md
reports/gitstats3_report/: gitstats_metrics.json
scratch/: dummy  force_reindex.py  test_browse.py  test_source_db.py
scripts/: run_tree_sitter.py  setup_env.sh
src/: __init__.py  gitstats_analyzers.py  gitstats_ast.py  gitstats_cli.py  gitstats_config.py  gitstats_constants.py  gitstats_core.py  gitstats_datacollector.py  gitstats_export.py  gitstats_gitcommands.py  gitstats_gitdatacollector.py  gitstats_helpers.py  gitstats_hotspot.py  gitstats_index.py  gitstats_maintainability.py  gitstats_mcp.py  gitstats_oopmetrics.py  gitstats_repository.py  gitstats_strings.json  gitstats_strings.py  gitstats_tree_sitter_parser.py  tsgm.py
src/cli/: main.py
src/core/: config.py  constants.py  datacollector.py  errors.py  gitdatacollector.py  repository.py
src/mcp_core/: metrics.py  server.py
src/mcp_server/: config.py  context_helper.py  core.py  embedder.py  embedding.py  errors.py  events.py  federated_graph.py  gorgonzola_graph.py  graph_algorithms.py  graph_api.py  hcgs.py  highlevel_core.py  index.py  index_db.py  index_pipeline.py  index_worker.py  indexer.py  naming_analyzer.py  prometheus_metrics.py  ramdisk.py  registry.py  server.py
src/metrics/: analyzers.py  hotspot.py  maintainability.py  oopmetrics.py
tests/: conftest.py  test_auto_sync.py  test_cbm_ast.py  test_context_helper.py  test_dsl_compiler.py  test_error_handling.py  test_federated_graph.py  test_fts_lifecycle.py  test_hcgs.py  test_lsp_client.py  test_lsp_pool.py  test_lsp_resolution.py  test_mcp.py  test_mcp_resources.py  test_mcp_unified.py  test_naming_analyzer.py  test_orchestrator.py  test_path_validation.py  test_registry.py  test_sqlite_indexer.py  test_tree_sitter_integration.py  test_tsgm.py  test_vcs_coupling.py
(+64 files in other folders)
