[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitstats3"
version = "3.0.0"
description = "Git repository statistics generator with OOP metrics analysis"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "GPL-2.0"}
authors = [
    {name = "Gitstats3 Contributors"}
]
keywords = ["git", "statistics", "metrics", "analysis", "oop"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "psutil>=5.0.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-c",
    "tree-sitter-cpp",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-ruby",
    "tree-sitter-swift",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/gitstats3/gitstats3"
Repository = "https://github.com/gitstats3/gitstats3"

[project.scripts]
gitstats3 = "src.gitstats_cli:main"
gitstats3-mcp = "src.gitstats_mcp:main"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
filterwarnings = []

[tool.ruff]
line-length = 100
target-version = "py37"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]  # Line too long - handled by formatter

[tool.mypy]
python_version = "3.6"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
